--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -1,7 +1,9 @@
 ---
 ru:
   landing:
-    header: "Текст в шапке"
+    header:
+      h2: "Бесплатные шаблоны для стартапов. Скачайте устав общества, заявления, квитанции и другие документы для регистрации бизнеса."
+      leave-email: "Оставьте нам адрес вашей электронной почты, и мы сообщим вам об изменениях в законодательстве."
     about:
       h2: "О проекте"
     templates:
