--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -2,9 +2,14 @@
 ru:
   landing:
     header:
-      h2: "Бесплатные шаблоны для стартапов. Скачайте устав общества, заявления, квитанции и другие документы для регистрации бизнеса."
-      leave-email: "Оставьте нам адрес вашей электронной почты, и мы сообщим вам об изменениях в законодательстве."
+      h2: Бесплатные шаблоны для стартапов. Скачайте устав общества, заявления, квитанции и другие документы для регистрации бизнеса.
+      leave-email: Оставьте нам адрес вашей электронной почты, и мы сообщим вам об изменениях в законодательстве.
     about:
-      h2: "О проекте"
+      h2: О проекте
     templates:
-      h2: "Документы"
+      h2: Документы
+    social:
+      h2: Расскажите друзьям
+    footer:
+      h2: Disclaimer
+      contacts: Контакты
