--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -6,8 +6,17 @@ ru:
       leave-email: Оставьте нам адрес вашей электронной почты, и мы сообщим вам об изменениях в законодательстве.
     about:
       h2: О проекте
+      text: Бла бла
     templates:
       h2: Документы
+    news:
+      h2: Новости
+      h3: Решение единственного учредителя
+      text: Добавили новый документ
+      more-link: (подробнее&hellip;)
+    partners:
+      h2: Команда
+      text: бла
     social:
       h2: Расскажите друзьям
     footer:
