[add] Files for Russian documents

--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -19,6 +19,7 @@ ru:
       text: бла
     social:
       h2: Расскажите друзьям
+      site-url: "http://startupdocs.ru"
     footer:
       h2: Disclaimer
       contacts: Контакты
