[add] Download form as partial

--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -3,7 +3,6 @@ ru:
   landing:
     header:
       h2: Бесплатные шаблоны для стартапов. Скачайте устав общества, заявления, квитанции и другие документы для регистрации бизнеса.
-      leave-email: Оставьте нам адрес вашей электронной почты, и мы сообщим вам об изменениях в законодательстве.
     about:
       h2: О проекте
       text: Бла бла
@@ -23,3 +22,6 @@ ru:
     footer:
       h2: Disclaimer
       contacts: Контакты
+
+  download_form:
+    text: Оставьте нам адрес вашей электронной почты, и мы сообщим вам об изменениях в законодательстве.
