[add] Template for Reshenie

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -22,4 +22,5 @@ en:
       h2: Disclaimer
       contacts: StartupDocs is brought to you by
   download_form:
+    h2: Download Documents
     text: Please enter your e-mail address so I can keep you posted on any updates.
