--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -24,4 +24,5 @@ ru:
       contacts: Контакты
 
   download_form:
+    h2: Скачать все документы
     text: Оставьте нам адрес вашей электронной почты, и мы сообщим вам об изменениях в законодательстве.
