[add] Styles for mailchimp form

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -24,3 +24,4 @@ en:
   download_form:
     h2: Download Documents
     text: Please enter your e-mail address so I can keep you posted on any updates.
+    button: Download
