--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -26,3 +26,4 @@ ru:
   download_form:
     h2: Скачать все документы
     text: Оставьте нам адрес вашей электронной почты, и мы сообщим вам об изменениях в законодательстве.
+    button: Скачать
