--- a/locales/en.yml
+++ b/locales/en.yml
@@ -19,9 +19,12 @@ en:
       text: Many people have helped me making this initiative a reality.
     social:
       h2: Sharing is caring
-    footer:
+    disclaimer:
       h2: Disclaimer
-      contacts: StartupDocs is brought to you by
+      text: This web site and the documents that can be downloaded from here contain general information, which is not advice, and should not be treated as such. The information is provided “as is” without any representations or warranties, expressed or implied.
+
+  footer:
+    text: StartupDocs is brought to you by
 
   download_form:
     h2: Download Documents
