[add] Google Analytics

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -1,6 +1,7 @@
 ---
 en:
   landing:
+    title: Free templates for startups
     header:
       h2: Free templates for startups. Download fair and standardized term sheet, shareholders’ agreement, guide to stock options and more.
     about:
