--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -1,6 +1,7 @@
 ---
 ru:
   landing:
+    title: Бесплатные документы для стартапов
     header:
       h2: Бесплатные шаблоны для стартапов. Скачайте устав общества, заявления, квитанции и другие документы для регистрации бизнеса.
     about:
