[add] Lawyer section

--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -17,7 +17,7 @@ ru:
       more-link: (подробнее&hellip;)
     partners:
       h2: Помощь юриста
-      text: бла
+      text: Если у вас остались вопросы, или же вам требуется помощь в заполнении документов, обратитесь к нашему юристу <a href="kolotilin_dv@mail.ru">Дмитрию Колотилину</a> по телефону +7 921 612-7921 или лично по адресу 236006, Калининград, ул. Театральная 35, БЦ "Морской", 7 этаж, офис 715.
     social:
       h2: Расскажите друзьям
       site-url: "http://startupdocs.ru"
